# Eucl_Tito

./: .gitignore  CMakeLists.txt  Comands.txt  Eucl_Tito.jucer  MOSCOW.md  Resources.md  TODO.md
RESEARCH/: Research_euclidean-sequencer-in-juce.md  Research_logging-and-error-handling-in-the-juce-framework.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
